using ClassroomService.Application.Abstractions;
using ClassroomService.Application.DTOs.Session;
using ClassroomService.Application.Exceptions;
using ClassroomService.Domain.Entities;

namespace ClassroomService.Application.Services;

public class SessionService : ISessionService
{
    private readonly ISessionRepository _sessionRepository;
    private readonly IClassroomRepository _classroomRepository;
    private readonly IStreamingInternalClient _streamingClient;
    private readonly ISessionTerminationService _termination;
    private readonly IUnitOfWork _unitOfWork;

    public SessionService(
        ISessionRepository sessionRepository,
        IClassroomRepository classroomRepository,
        IStreamingInternalClient streamingClient,
        ISessionTerminationService termination,
        IUnitOfWork unitOfWork)
    {
        _sessionRepository = sessionRepository;
        _classroomRepository = classroomRepository;
        _streamingClient = streamingClient;
        _termination = termination;
        _unitOfWork = unitOfWork;
    }

    public async Task<IEnumerable<Session>> GetSessionsByClassroomAsync(Guid classroomId, CancellationToken ct = default)
    {
        return await _sessionRepository.GetByClassroomIdAsync(classroomId, ct);
    }

    public async Task<Session> CreateSessionAsync(Guid classroomId, CreateSessionRequest request, CancellationToken ct = default)
    {
        var session = new Session
        {
            Id = Guid.NewGuid(),
            ClassroomId = classroomId,
            Title = request.Title,
            Description = request.Description,
            ScheduledAtUtc = request.ScheduledAtUtc,
            CreatedAtUtc = DateTime.UtcNow,
            Status = SessionStatus.Scheduled,
            ParticipationMode = request.ParticipationMode,
            RecordingEnabled = request.RecordingEnabled
        };

        await _sessionRepository.AddAsync(session, ct);
        await _unitOfWork.SaveChangesAsync(ct);
        return session;
    }

    public async Task StartSessionAsync(Guid sessionId, CancellationToken ct = default)
    {
        // Start Distributed boundary via Unit of Work
        await _unitOfWork.BeginTransactionAsync(ct);

        try
        {
            var session = await _sessionRepository.GetByIdAsync(sessionId, ct);
            if (session == null) throw new KeyNotFoundException("Session not found.");

            if (session.Status != SessionStatus.Scheduled)
                throw new ConflictException("Only scheduled sessions can be started.");

            var classroom = await _classroomRepository.GetByIdAsync(session.ClassroomId, ct);
            if (classroom == null) throw new KeyNotFoundException("Associated classroom not found.");

            // Local State Change
            session.Status = SessionStatus.Live;
            session.StartedAtUtc = DateTime.UtcNow;
            await _sessionRepository.UpdateAsync(session, ct);

            // Synchronous cross-service call
            var success = await _streamingClient.CreateStreamAsync(
                session.Id,
                session.ClassroomId,
                classroom.TeacherId,
                session.ParticipationMode,
                session.RecordingEnabled,
                ct);

            if (!success)
            {
                throw new Exception("Media server failed to initialize. Rolling back.");
            }

            // Commit local DB changes only if remote service succeeded
            await _unitOfWork.CommitAsync(ct);
        }
        catch
        {
            await _unitOfWork.RollbackAsync(ct);
            throw;
        }
    }

    public async Task<SessionEndOutcome> EndSessionAsync(
        Guid classroomId, Guid sessionId, Guid requestingUserId, CancellationToken ct = default)
    {
        var session = await _sessionRepository.GetByIdAsync(sessionId, ct);

        // A session addressed under the wrong classroom is treated as missing rather than
        // forbidden, so the route cannot be used to probe for sessions in other classrooms.
        if (session is null || session.ClassroomId != classroomId)
        {
            throw new KeyNotFoundException("Session not found.");
        }

        var classroom = await _classroomRepository.GetByIdAsync(classroomId, ct);
        if (classroom is null)
        {
            throw new KeyNotFoundException("Associated classroom not found.");
        }

        // Only the teacher who owns the classroom may close its sessions. Another teacher holding
        // a valid Teacher role token is still refused.
        if (classroom.TeacherId != requestingUserId)
        {
            throw new ForbiddenAccessException("Only the classroom's teacher can end this session.");
        }

        return await _termination.EndAsync(sessionId, SessionEndTrigger.Teacher, "Ended by the teacher.", ct);
    }
}