' Design pattern — Repository (with a generic base).
'
' Two things the diagram is meant to show:
'   1. The application layer depends on the repository INTERFACE, and the
'      interface lives in the application layer, not the infrastructure one —
'      that is the dependency inversion at the layer boundary.
'   2. GenericRepository<T> implements the six shared operations once; the
'      specialised repositories inherit them and add only their own queries.
'
' Only three of the ten specialised repositories are drawn; drawing all ten
' adds no information and stretches the diagram past 2.2:1.
@startuml
!include _style.puml
skinparam linetype ortho

package "طبقة التطبيق" {
  interface "IRepository<T>" as IRepo {
    + GetByIdAsync(id)
    + GetPagedAsync(page, pageSize)
    + AddAsync(entity)
    + UpdateAsync(entity)
    + DeleteAsync(id)
    + SaveChangesAsync()
  }
  interface ISessionRepository {
    + GetActiveForClassroomAsync(id)
    + TryClaimForTerminationAsync(id)
  }
  class SessionService
}

package "طبقة البنية التحتية" {
  class "GenericRepository<T>" as GRepo {
    - _context : DbContext
  }
  class SessionRepository
  class QuizRepository
  class ClassroomRepository
  class ApplicationDbContext
}

SessionService ..> ISessionRepository
IRepo <|-- ISessionRepository

IRepo <|.. GRepo
GRepo <|-- SessionRepository
GRepo <|-- QuizRepository
GRepo <|-- ClassroomRepository
ISessionRepository <|.. SessionRepository

GRepo --> ApplicationDbContext

note bottom of ApplicationDbContext
  Entity Framework محجوب داخل هذه الطبقة:
  لا تعرفه طبقة التطبيق ولا يظهر في توقيع
  أيّ عملية من عمليات المستودع.
end note
@enduml
